<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yo!pool</string>
    <string name="action_profile">Profile</string>
    <string name="sign_in">Sign In</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_help">Help</string>
    <string name="pickup_location">PickUp Location</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_activity_title">Sign In</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_map">Yo!Rider Pickup</string>
    <string name="title_activity_driver_route">Yo!Driver Route</string>
    <string name="title_activity_list">Choose a Yo!Driver</string>
    <string name="requestRide">Request Yo!Ride</string>
    <string name="yo_driver">Yo!Driver</string>
    <string name="yo_rider">Yo!Rider</string>
    <string name="driver_ready_title">Ready to YoPool?</string>
    <string name="snooze">Snooze</string>
    <string name="confirm">Confirm</string>
    <string name="not_today">Not Today</string>
    <string name="title_activity_driverdialog">Yo!Driver</string>
    <string name="location_label">Locations</string>
    <string name="home_label">Home</string>
    <string name="action_signout">Sign Out</string>
    <string name="work_label">Work</string>
    <string name="timings_label">Timings</string>
    <string name="to_label">To Y!</string>
    <string name="from_label">From Y!</string>
    <string name="car_model">Car Model</string>
    <string name="license_no">License No</string>
    <string name="pickup_time">Pickup Time: </string>
    <string name="save">Save </string>
    <string name="at">at </string>
    <string name="title_activity_driver_list">Yo!Driver List</string>
    <string name="title_activity_driver_details">Driver Details</string>
    <string name="title_activity_driver_dashboard">Driver Dashboard</string>
    <string name="title_activity_passenger_list">Yo!Rider List</string>
    <string name="title_activity_driver_ready">Are you ready?</string>

</resources>
