<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.yopool.SplashScreen" >

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="always"/>
    
     <item
        android:id="@+id/action_notifications"
        android:orderInCategory="100"
        android:title="@string/action_notifications"
        app:showAsAction="always"/>
     
      <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="always"/>
      
        <item
        android:id="@+id/action_signout"
        android:orderInCategory="100"
        android:title="@string/action_signout"
        app:showAsAction="always"/>

</menu>
