<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/LightPurple"
    android:padding="5dp"
    tools:context="com.yahoo.android.yopool.activity.ProfileActivity" >

    <LinearLayout
        android:id="@+id/linearLayoutDriver"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/profilePicView"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/ramya_pic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nameTextView"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="Ramya Balaraman"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/DarkPurple"
                android:textSize="22sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/phLabel"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="(412) 482 7981"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/DarkPurple"
                android:textSize="22sp"
                android:textStyle="bold"
                android:typeface="normal" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayoutDriver"
        android:layout_marginTop="2dp"
        android:background="@color/Grey"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView01"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/location_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/DarkPurple"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LinearLayout01"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/textView1"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/home_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/DarkPurple"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/homeEditText"
            style="@style/textStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@color/White"
            android:padding="5dp" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LinearLayout02"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/carDetailsTextView"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/work_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/DarkPurple"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/workEditText"
            style="@style/textStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="46dp"
            android:background="@color/White"
            android:ems="10"
            android:padding="5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout04"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LinearLayout03"
        android:layout_marginTop="2dp"
        android:background="@color/Grey"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout05"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/LinearLayout04"
        android:layout_centerVertical="true"
        android:layout_marginTop="2dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView03"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/timings_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/DarkPurple"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout06"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LinearLayout05"
        android:layout_marginTop="2dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView04"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/to_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/DarkPurple"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/toStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:background="@color/White"
            android:clickable="true"
            android:onClick="toStart"
            android:padding="5dp"
            android:text="8.30 am"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/modelNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/toEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@color/White"
            android:clickable="true"
            android:onClick="toEnd"
            android:padding="5dp"
            android:text="9.30 am"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout07"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LinearLayout06"
        android:layout_marginTop="2dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView05"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/from_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/DarkPurple"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fromStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:background="@color/White"
            android:clickable="true"
            android:onClick="fromStart"
            android:padding="5dp"
            android:text="5.30 pm"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/fromEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@color/White"
            android:clickable="true"
            android:onClick="fromEnd"
            android:padding="5dp"
            android:text="6.30 pm"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout08"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LinearLayout07"
        android:layout_marginTop="2dp"
        android:background="@color/Grey"
        android:orientation="vertical" >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout09"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LinearLayout08"
        android:layout_marginTop="2dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView07"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/yo_driver"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/DarkPurple"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/driverSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:checked="true"
            android:onClick="toggle_driver_pref"
            android:textOff="NO"
            android:textOn="YES" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LinearLayout09"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/TextView06"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/car_model"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/DarkPurple"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/carModelEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:background="@color/White"
            android:ems="10"
            android:padding="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout11"
        style="@style/textStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/LinearLayout10"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/TextView08"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/license_no"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/DarkPurple"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/licenseNoEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:background="@color/White"
            android:ems="10"
            android:padding="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        style="@style/btnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout11"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_bckground"
        android:onClick="save_profile"
        android:text="@string/save" />

</RelativeLayout>